update bot data

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1,7 +1,10 @@
 {
       "app_name": "سمسم",
+      "menu_tree": "شجرة القرارٍ",
+
       "menu_feature": "المميزات",
       "menu_pricing": "اﻻسعار",
+      "menu_service": "الخدمات",
       "menu_team": "الفريق",
            "menu_bot": "سمسم BOT",
       "menu_cli": "سمسم CLI",
@@ -137,30 +140,35 @@
       "chat_decisionMaker_step_102": "هل الذين يكتبون يثقون ببعضهم البعض؟",
       "chat_decisionMaker_step_105": "هل ماصلح الذين يكتبون واحده ؟",
       "chat_decisionMaker_step_107": "هل تحتاج / تريد اﻻعتماد على طرف ثالث موثوق به؟",
-      "chat_decisionMaker_step_109": "هل يجب أن يكون سجل المعاملات قابل للتغيير؟",
+      "chat_decisionMaker_step_109": "هل يجب أن يكون سجل المعاملات غير قابل للتغيير؟",
       "chat_decisionMaker_step_111": "هل ترغب في تقييد العقد التي تنشئ كتلًا جديدة / تتخذ قرارات لقائمة من العقد المعروفة؟",
       "chat_decisionMaker_step_regularNode": "هل تريد تقييد العقد التي تحتوي على نسخة من الدفتر  بقائمة  من العقد المعتمدة؟",
       "chat_decisionMaker_step_113": "أين يتم تحديد الإجماع؟",
       "chat_decisionMaker_step_114_v_1": "داخل المؤسسه",
       "chat_decisionMaker_step_114_v_2": "بين المؤسسات",
       "chat_decisionMaker_step_115": "استخدام أي شبكة بلوك تشين permissioned مثل hyperledger fabric quorum أو hyperledger besu، انها شبكة البلوك تشين الخاصه",
+      "chat_decisionMaker_step_115_a": "إنها شبكة بلوك تشين  خاصة بدون إذن ، على سبيل المثال شبكة إيثريوم الخاصة على السحابة ",
+
       "chat_decisionMaker_step_117": "انها شبكة البلوك تشين المهجنة",
       "chat_decisionMaker_step_116": "هل تتعامل مع بيانات حساسة وتهتم كثيرًا بسرية البيانات؟",
       "chat_decisionMaker_step_116_answer1": " استخدم  hyperledger fabric ولإخفاء البيانات تمامًا ، استخدم القناة  channel بين أصحاب المصلحة أو استخدم quorum  أو hyperledger besu بجانب تشفير المعاملات التي تريد إخفاءها",
       "chat_decisionMaker_step_116_answer2": "استخدام أي شبكة بلوك تشين permissioned مثل hyperledger fabric quorum أو hyperledger besu",
-      "chat_decisionMaker_step_119": "هل تريد أن تكون المعاملات خاصة أم عامة؟",
+      "chat_decisionMaker_step_119": "هل تريد التحكم في من يمكنه الانضمام إلى الشبكة؟",
+      "chat_decisionMaker_step_119_a": "هل تريد أن تكون المعاملات خاصة أم عامة؟",
       "chat_decisionMaker_step_120_v_1": "خاص",
       "chat_decisionMaker_step_120_v_2": "عام",
       "chat_decisionMaker_step_121_a": "انشر public apis",
       "chat_decisionMaker_step_121_b": "ﻻ تنشر اى  public apis",
       "chat_decisionMaker_step_121": "استخدم شبكة البلوك تشين العامه",
 
-
+      "chat_decisionMaker_step_122_SC": "هل تردي شبكة تدعم العقود الذكية؟",
+     
       "chat_decisionMaker_step_122": "أخبرني عن معدل نقل البيانات المطلوب.",
       "chat_decisionMaker_step_123_v_1": "أريد اﻷسرع إنتاجية",
       "chat_decisionMaker_step_123_v_2": "لا أهتم كثيرًا بسرعة المعاملة",
       "chat_decisionMaker_step_124": "يمكنك استخدام شبكات بلوك تشين مثل Matic أو loom أو Celo أو Neo أو EOS أو Tron",
-      "chat_decisionMaker_step_125": "يمكنك استخدام شبكات بلوك تشين مثل Ethereum و Bitcoin",
+      "chat_decisionMaker_step_125": "يمكنك استخدام شبكات بلوك تشين مثل Ethereum ",
+      "chat_decisionMaker_step_125_no_sm": "يمكنك استخدام شبكات بلوك تشين مثل  Bitcoin",
       "chat_decisionMaker_step_126": "هل يتعامل عقدك مع الملفات أو الصور أو ملفات الصوت أو الفيديو؟",
       "chat_decisionMaker_step_128": " لا يمكنك حفظ بيانات كبيرة في بلوك تشين لذا عليك التفكير في استخدام إحدى الأدوات التالية بناءً على تفضيلاتك: خدمة التخزين اللامركزية مثل IPFS أو خدمة التخزين المركزية مثل Amazon S3",
       "chat_decisionMaker_step_129": "ربما لا تحتاج إلى حفظ بياناتك off chain ",
@@ -199,13 +207,20 @@
       "chat_decisionMaker_service_reply_platform": "تقديم استشارة لاختيار منصة بلوك تشين ",
       "chat_decisionMaker_service_reply_networkType": "تقديم استشارة بخصوص نوع شبكات بلوك تشين",
    
-      "chat_decisionMaker_service_type_1": "Check if it's a blockchain use case ",
-      "chat_decisionMaker_service_type_2": "Check what type of network I should use",
-      "chat_decisionMaker_service_type_3": "Check the best blockchain platform I should consider",
-      "chat_decisionMaker_service_type_4": "Check the best tools I should consider",
-      "chat_decisionMaker_service_type_4_1": "Wallets",
-      "chat_decisionMaker_service_type_4_2": "Handling data",
-      "chat_decisionMaker_service_type_4_3": "Transactions",
+      "idea_validation": "التحقق من صحة الفكرة",
+      "Wallets_Integration": "التكامل مع المحافظ",
+      "handle_offChain":  "معالجة البيانات.",
+      "txtCost": "تكلفة المعاملات",
+      "select_platform": "اختيار منصة البلوك تشين",
+      "select_networkType": "اختيار نوع شبة البلوك تشين",
+
+      "chat_decisionMaker_service_type_1": "التحقق من الفكرة هل هى حالة استخدام جيد للبلوك تشين",
+      "chat_decisionMaker_service_type_2": "التحقق من نوع الشبكة التي يجب أن أستخدمها",
+      "chat_decisionMaker_service_type_3": "اخيار افضل منصة بلوك تشين تناسب احتياجى",
+      "chat_decisionMaker_service_type_4": "اخيتار افضل اﻻدوات التى يفضل استخدامها",
+      "chat_decisionMaker_service_type_4_1": "المحافظ",
+      "chat_decisionMaker_service_type_4_2": "معالجة البيانات",
+      "chat_decisionMaker_service_type_4_3": "المعاملات",
     
    
 
